--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
           </div>
           <div class="row" id="final_submit">
             <div class="col-6"></div>
-            <button class="btn btn-info" id="but">Submit</button>
+            <button class="btn btn-info font-weight-bold" id="but">NEXT</button>
           </div>
 
         </div>
